added some chnages